# tonie-podcast-sync

./: .all-contributorsrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  AGENTS.md  LICENSE  README.md  flake.nix  manual_test.py  mise.toml  mkdocs.yml  podcast.py  pyproject.toml  requirements.txt  settings.toml.example  toniepodcastsync.py  versions.json
.github/workflows/: docs.yml  format_linting.yml  python-app.yml  release-docs.yml  run_tests.yml  test_docs_build.yml  test_publish.yml
docs/: contributing.md  index.md  installation.md  license.md  quickstart.md
docs/configuration/: examples.md  settings.md
docs/usage/: cli.md  docker.md  library.md
latest/configuration/settings/: index.html
latest/license/: index.html
latest/quickstart/: index.html
latest/search/: search_index.json
latest/usage/cli/: index.html
latest/usage/docker/: index.html
ressources/: tps_asciinema.cast
rpi_example/: tps.py  tps.service  tps.sh  tps.timer
tests/: test_cli_episode_max_duration.py  test_download_fallback.py  test_download_retry_logic.py  test_episode_duration_handling.py  test_episode_selection_with_max_duration.py  test_performance_optimizations.py  test_podcast.py  test_podcast_sync.py  test_reshuffle_logic.py  test_soft_wrap_setting.py  test_upload_failure_handling.py  test_wipe_setting.py
tests/res/: alle-gegen-nico.xml  diemaus.xml  kakadu.xml  pumuckl.xml  responses.yaml  sandmann.xml  true_crime.xml
tonie_podcast_sync/: cli.py  config.py  constants.py  container_detection.py  podcast.py  tonie_update.py  tonie_update_local.py  toniepodcastsync.py
v3.4.0/: 404.html  index.html
v3.4.0/configuration/examples/: index.html
v3.4.0/contributing/: index.html
v3.4.0/installation/: index.html
v3.4.0/usage/docker/: index.html
