[tool.poetry]
name = "tonie-podcast-sync"
version = "1.1.1"
description = "allows synching podcast episodes to creative tonies"
authors = ["Alexander Hartmann <16985220+alexhartm@users.noreply.github.com>"]
repository = "https://github.com/alexhartm/tonie-podcast-sync"
readme = "README.md"
license = "MIT"
keywords = ["toniebox", "podcast"]
packages = [{ include = "toniepodcastsync.py" }, { include = "podcast.py" }]

[tool.poetry.dependencies]
python = "^3.10.11"
wget = "^3.2"
feedparser = "^6.0.10"
# tonie-api = { git = "https://github.com/moritzj29/tonie_api.git" }
#
#  -- had to uncomment the tonie-api dependency unforunately. 
#     reason is that pypi does not accept direct dependencies
#     to other git projects, so this will fail during 'poetry publish'.
#     see e.g. https://github.com/python-poetry/poetry/issues/4471
#     Workaround is currently to have tonie_api included as a submodule 

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.ruff]
# Add "Q" to the list of enabled codes.
select = ["ALL"]
ignore = ["AN101"]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
