[tool.poetry]
name = "tonie-podcast-sync"
version = "2.1.0"
description = "allows synching podcast episodes to creative tonies"
authors = ["Alexander Hartmann <16985220+alexhartm@users.noreply.github.com>"]
repository = "https://github.com/alexhartm/tonie-podcast-sync"
readme = "README.md"
license = "MIT"
keywords = ["toniebox", "podcast"]
packages = [{ include = "toniepodcastsync.py" }, { include = "podcast.py" }]

[tool.poetry.dependencies]
python = "^3.10.11"
feedparser = "^6.0.10"
tonie-api = "^0.1.1"
rich = "^13.5.2"
ruff = "^0.1.13"
black = "^23.12.1"
pre-commit = "^3.6.0"
pathvalidate = "^3.2.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
responses = "^0.23.3"

[tool.ruff]
# Add "Q" to the list of enabled codes.
select = ["ALL"]
ignore = ["ANN101", "D105", "N999"]
line-length = 120
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "D",
    "A",
    "ANN",
    "S",
    "SLF",
    "PLR2004",
    "ARG002",
    "INP001",
    "FLY",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
