[project]
name = "tonie-podcast-sync"
version = "3.2.3"
description = "allows synching podcast episodes to creative tonies"
authors = [{ name = "Alexander Hartmann", email = "16985220+alexhartm@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["toniebox", "podcast"]
dependencies = [
    "feedparser>=6.0.10",
    "tonie-api>=0.1.1",
    "rich>=13.5.2",
    "pathvalidate>=3.2.0",
    "pydub>=0.25.1",
    "python-slugify>=8.0.1",
    "dynaconf>=3.2.3",
    "typer>=0.16.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
tonie-podcast-sync = "tonie_podcast_sync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.1.13",
    "pre-commit>=3.6.0",
    "responses>=0.23.3",
]

[tool.ruff]
# Add "Q" to the list of enabled codes.
lint.select = ["ALL"]
lint.ignore = ["D105", "N999", "COM812"]
line-length = 120
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D",
    "A",
    "ANN",
    "S",
    "SLF",
    "PLR2004",
    "ARG002",
    "INP001",
    "FLY",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
